<resources>
    <string name="app_name">DongManBuy</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">搜索动漫周边商品/店铺</string>
    <string name="message">消息</string>
    <string name="sao">扫一扫</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="find">发现</string>
    <string name="shop_street">店铺街</string>
    <string name="shopping_car">购物车</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_order">我的订单</string>
    <string name="browse_history">浏览记录</string>
    <string name="ship_address">收货地址</string>
    <string name="xian_shi_te_you">限时特优</string>
    <string name="help">帮助中心</string>
    <string name="brand_page">品牌页面</string>
    <string name="you_hui_huo_dong">优惠活动</string>
    <string name="xian_shi_miao_sha">限时秒杀</string>
    <string name="miao_sha_time">1天1时1分1秒</string>
    <string name="jing_pin_tui_jian">精品推荐</string>
    <string name="jing_ping_tui_jian_content">精品商品尽收眼底赶快行动吧</string>
    <string name="more">更多</string>
    <string name="email">2543111@qq.com</string>
    <string name="zhou_mou_buy">ZHOUMOBUY周末</string>
    <string name="my_page">我的主页</string>
    <string name="my_shou_cang">我的收藏</string>
    <string name="guan_zhu_dian_pu">关注店铺</string>
    <string name="change_password">修改密码</string>
    <string name="setting">设置</string>
    <string name="shop_street_content">精品店铺一条街</string>
    <string name="cai_ni_xi_huan">猜你喜欢</string>
    <string name="ban_quan">"@2016ZMOBUY周末(zmobuy.com)版权所有，并保留所有权利"</string>
    <string name="wei_yi">卫衣</string>
    <string name="zhen_zhi_shan">针织衫</string>
    <string name="wai_tao">外套</string>
    <string name="t_xue">T恤</string>
    <string name="ming_xin_pian">明信片</string>
    <string name="da_li_bao">大礼包</string>
    <string name="pu_ke_pai">扑克牌</string>
    <string name="tai_li">台历</string>
    <string name="qian_bao">钱包</string>
    <string name="bi_ji_ben">笔记本</string>
    <string name="tong_ren_ka">AR同人卡</string>
    <string name="shou_ban">手办</string>
    <string name="mo_xing">模型</string>
    <string name="nothing">购物车什么都没有</string>
    <string name="qu_guang_guang">去逛逛</string>
    <string name="may_be_you_want">你可能想要</string>
    <string name="zhang_hao">账 号</string>
    <string name="zhang_hao_hint">用户名/手机号/邮箱</string>
    <string name="password">密 码</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="new_user_zhu_ce">新用户注册</string>
    <string name="di_san_fang_deng_lu">第三方登录</string>
    <string name="qq">QQ</string>
    <string name="wei_bo">微博</string>
    <string name="wei_xin">微信</string>
    <string name="phone_register">手机注册</string>
    <string name="phone_kai_shi">+86</string>
    <string name="phone_num">手机号</string>
    <string name="inpu_yan_zheng_ma">请输入验证码</string>
    <string name="send_yan_zheng_ma">发送验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请重新输入密码</string>
    <string name="register">注册</string>
    <string name="have_registered_login">已注册直接登录</string>
    <string name="email_register">邮箱注册</string>
    <string name="user_name">用户名</string>
    <string name="input_email_number">请输入邮箱</string>
</resources>
